force-app/main/default/objects/vf_Feedback__c/vf_Feedback__c.object-meta.xml
<CustomObject>
    <label>Feedback</label>
    <pluralLabel>Feedback</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Feedback Number</label>
        <displayFormat>FB-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to track volunteer feedback</description>
</CustomObject>