force-app/main/default/objects/vf_Feedback__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Volunteer comments and feedback</description>
    <inlineHelpText>Detailed comments and feedback from the volunteer</inlineHelpText>
</CustomField>