force-app/main/default/objects/vf_Feedback__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
    <description>Date the feedback was provided</description>
    <inlineHelpText>The date when this feedback was submitted</inlineHelpText>
</CustomField>