force-app/main/default/objects/vf_Feedback__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>vf_Project__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
    <description>Project the feedback is about</description>
    <inlineHelpText>The project this feedback is related to</inlineHelpText>
</CustomField>