force-app/main/default/objects/vf_Feedback__c/fields/Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Score__c</fullName>
    <label>Satisfaction Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <description>Volunteer satisfaction score (1-10)</description>
    <inlineHelpText>Volunteer's satisfaction score on a scale of 1-10</inlineHelpText>
</CustomField>