force-app/main/default/objects/vf_Feedback__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>vf_Volunteer__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
    <description>Volunteer who provided the feedback</description>
    <inlineHelpText>The volunteer who provided this feedback</inlineHelpText>
</CustomField>